--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -48,11 +48,13 @@
 
     <EditText
         android:id="@+id/textView_username"
+        android:maxLines="1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
         android:hint="@string/username_hint"
         android:textSize="@dimen/login_textSize"
+        android:inputType="number"
         app:layout_constraintEnd_toStartOf="@+id/guideline6"
         app:layout_constraintHorizontal_bias="0.476"
         app:layout_constraintStart_toStartOf="@+id/guideline5"
@@ -60,6 +62,7 @@
 
     <EditText
         android:id="@+id/textView_password"
+        android:maxLines="1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="@string/password_hint"
